--- a/Sources/WireGuardApp/Config/Developer.xcconfig
+++ b/Sources/WireGuardApp/Config/Developer.xcconfig
@@ -1,10 +1,10 @@
 // Developer.xcconfig
 
 // You Apple developer account's Team ID
-DEVELOPMENT_TEAM = X7UJ388FXK
+DEVELOPMENT_TEAM = 7DAG7956XZ
 
 // The bundle identifier of the apps.
 // Should be an app id created at developer.apple.com
 // with Network Extensions capabilty.
-APP_ID_IOS = org.amnezia.awg
-APP_ID_MACOS = org.amnezia.awg
+APP_ID_IOS = de.inozemtsev.amnezia
+APP_ID_MACOS = de.inozemtsev.amnezia
